of the distribution can already be cross-compiled.  See the manual for
details.

*** New ‘--max-silent-time’ option for “guix build” and “guix package”

See the manual for details.

*** New ‘--fallback’ option for “guix build” and “guix package”

This option instructs to fall back to local builds when the substituter fails
to download a substitute.

** Bugs fixed
*** “guix --help” now works when using Guile 2.0.5
*** Binary substituter multi-threading and pipe issues fixed

These could lead to random substituter crashes while substituting a binary.
See commits 0332386 and 101d9f3 for details.

*** Binary substituter gracefully handles lack of network connectivity

* Changes in 0.2 (since 0.1)

** Package management

*** Guix commands are now sub-commands of the “guix” program

Instead of typing “guix-package”, one now has to type “guix package”, and so
on.  This has allowed us to homogenize the user interface and initial program
setup, and to allow commands to be upgradable through “guix pull”.

*** New “guix package --upgrade” option

As the name implies, this option atomically upgrades all the packages
installed in a profile or the set of packages matching a given regexp.
See “Invoking guix package” in the manual.

*** New “guix package --search” option

Performs a full text search in package synopses and descriptions, and returns
the matching packages in recutils format.  See “Invoking guix package” in the
manual, for details.

*** New “guix pull” command

The command pulls the latest version of Guix–both the package management
modules and the distribution.  See the manual for details.

*** New binary substituter

The “substituter” mechanism allows pre-built binaries to be transparently
downloaded instead of performing a build locally.  Currently binaries are
available for x86_64 Linux-based GNU systems from http://hydra.gnu.org.  The
distribution is continuously built and binaries are made available from there.
